<resources>

    <string name="app_name">PetApp</string>

    <string name="TxtChannelDescription">Okay</string>
    <string name="TxtHour">Hour</string>
    <string name="TxtMonth">Month</string>
    <string name="TxtEventName">Event Name</string>
    <string name="TxtAdd">Add</string>
    <string name="TxtSave">Save</string>
    <string name="TxtFemale">Female</string>
    <string name="TxtMale">Male</string>
    <string name="TxtUnknownName">Unknown Name</string>
    <string name="TxtGender">Gender</string>
    <string name="TxtDog">Dog</string>
    <string name="TxtName">Name</string>
    <string name="TxtExtraInfoOptional">Extra info (optional)</string>
    <string name="TxtOther">Other</string>
    <string name="TxtCat">Cat</string>
    <string name="TxtPassword">Password</string>
    <string name="TxtConfirmPassword">Confirm your password</string>
    <string name="TxtAlreadyAccount">Already have an account?</string>
    <string name="TxtClickHere">Click here.</string>
    <string name="TxtEvents">Events</string>
    <string name="TxtMyPets">My Pets</string>
    <string name="TxtMap">Map</string>
    <string name="TxtScanner">Scanner</string>
    <string name="TxtProfile">Profile</string>
    <string name="TxtExit">Exit</string>
    <string name="TxtHome">Home</string>
    <string name="TxtPhoneNumber">Phone number</string>
    <string name="TxtAlignLeashCode">Center the leash code\nin order to add it.</string>
    <string name="TxtScan">Scan</string>
    <string name="TxtAlarmDeactivated">Alarm not set</string>
    <string name="TxtYears">years</string>
    <string name="TxtMonths">months</string>
    <string name="Txt0Years">0 years</string>
    <string name="TxtBirthDate">Birth date</string>
    <string name="TxtDefaultExtra">No additional info</string>
    <string name="TxtDefaultAge">9 years</string>
    <string name="TxtDefaultPetName">Duda</string>
    <string name="TxtDefaultLeashCode">No leash</string>
    <string name="TxtDefaultUsername">Lorem Ipsum</string>



    <string name="MsgSelectMissingPet">Select your missing pet</string>
    <string name="MsgSelectImage">Select an image</string>
    <string name="ToastSelectTime">Please select the time</string>
    <string name="MsgRequestingPermission">Permission has not been granted, requesting camera access</string>
    <string name="MsgCameraAccess">Camera access is needed to start the scanner</string>
    <string name="MsgPermissionDenied">Camera access request was denied</string>
    <string name="MsgCodeNotRegistered">Code not found</string>
    <string name="MsgInvalidQR">Invalid code</string>
    <string name="MsgTurnOnGPS">Active your GPS, unknown location</string>
    <string name="MsgLocationNotFound">It was not possible to access your location</string>
    <string name="MsgDeviceNotSupported">The current device is not supported</string>
    <string name="MsgNotification">Missing pets were found in your surroundings</string>
    <string name="MsgUnknownDistance">Unknown distance</string>
    <string name="MsgErrorLocation">Address not found</string>
    <string name="MsgErrorGps">Unknown location</string>
    <string name="MsgInvalidAddress">Invalid address</string>
    <string name="MsgSelectSpecies">Select an species</string>
    <string name="MsgSelectGender">Select a gender</string>
    <string name="MsgInvalidDate">Invalid date</string>

    <string name="KeyChannelName">PetMissingAlert</string>
    <string name="KeyChannelID">Alert</string>
    <string name="KEY_NAMES_LIST">NAMESLIST</string>
    <string name="KEY_PET_LIST">PetList</string>
    <string name="KEY_EVENT_LIST">Events</string>
    <string name="KEY_TIME">TIME</string>
    <string name="KEY_PET">PET</string>
    <string name="KEY_POSITION">POSITION</string>
    <string name="KEY_BITMAP">BITMAP</string>
    <string name="KEY_LONGIT">LONG</string>
    <string name="KEY_LAT">LAT</string>
    <string name="KEY_SPINNER">SPINNER</string>
    <string name="KEY_ID">ID</string>
    <string name="KEY_ACTION">ACTION</string>
    <string name="MsgInvalidQRCode">Invalid code</string>
    <string name="KEY_EVENT">EVENT</string>
    <string name="TxtFacebook">Facebook</string>
    <string name="TxtInstagram">Instagram</string>
    <string name="TxtTwitter">Twitter</string>
    <string name="TxtDefaultEmail">lorem.ipsum@hotmail.com</string>
    <string name="TxtRegister">Register</string>


</resources>
